traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:12: error: ':' expected but ')' found.
def pair(n):Boolean = {
          ^TraversalZigZag:30: error: identifier expected but '}' found.
}
^